# Opengl_learn

./: .gitignore  CMakeLists.txt
1-Legacy_Opengl_hello_triangle/: CMakeLists.txt
1-Legacy_Opengl_hello_triangle/src/: lhello_triangle.cpp
10-Hello_cube/: CMakeLists.txt
10-Hello_cube/include/: shader_class.h
10-Hello_cube/resources/shaders/fragment/: fragment_texture.shader
10-Hello_cube/resources/shaders/vertex/: vertex_texture.shader
10-Hello_cube/src/: main.cpp
2-Modern_Opengl_hello_triangle/: CMakeLists.txt
2-Modern_Opengl_hello_triangle/include/: hello_triangle.h
2-Modern_Opengl_hello_triangle/src/: hello_triangle.cpp
3-Modern_Opengl_hello_rectangle/: CMakeLists.txt
3-Modern_Opengl_hello_rectangle/include/: hello_rectangle.h
3-Modern_Opengl_hello_rectangle/src/: hello_rectangle.cpp
4-Simple_shader/: CMakeLists.txt
4-Simple_shader/include/: simple_shader.h
4-Simple_shader/src/: simple_shader.cpp
5.Vertex_color/: CMakeLists.txt
5.Vertex_color/include/: vertex_color.h
5.Vertex_color/src/: vertex_color.cpp
6-Shader_class/: CMakeLists.txt
6-Shader_class/include/: shader_class.h
6-Shader_class/resources/shaders/fragment/: vertex_color.shader
6-Shader_class/resources/shaders/vertex/: vertex_color.shader
6-Shader_class/src/: main.cpp  shader_class.cpp
7-Texture_example/: CMakeLists.txt
7-Texture_example/resources/shaders/vertex/: vertex_texture.shader
7-Texture_example/src/: main.cpp  shader_class.cpp
8-Transformations/: CMakeLists.txt
8-Transformations/resources/shaders/fragment/: fragment_texture.shader
8-Transformations/resources/shaders/vertex/: vertex_texture.shader
8-Transformations/src/: main.cpp  shader_class.cpp
9-Going-3d/: CMakeLists.txt
9-Going-3d/resources/shaders/fragment/: fragment_texture.shader
9-Going-3d/resources/shaders/vertex/: vertex_texture.shader
9-Going-3d/src/: main.cpp
Opengl_learn/: CMakeLists.txt  Opengl_learn.cpp  Opengl_learn.h
Opengl_learn/include/: Opengl_learn.h
Opengl_learn/src/: Opengl_learn.cpp
